// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DataCatalog > When filters have been applied > clicking to remove a spatial filter removes the spatial filter 1`] = `
<div>
  <div
    class="data-catalog-wrapper"
  >
    <header
      class="hzn-main-header"
    >
      <div
        class="pt-4 container"
      >
        <h1>
          Data Catalog
        </h1>
        <form
          class=""
        >
          <div
            class="hzn-search hzn-global-header"
          >
            <input
              class="form-control"
              data-testid="collection-search__keyword"
              name="keyword"
              placeholder="Search using keywords, platform, dataset name, and more…"
              role="searchbox"
              type="text"
              value=""
            />
            <button
              aria-label="Submit"
              class="hzn-search__button btn btn-primary"
              type="button"
            />
          </div>
        </form>
        <ul
          class="hzn-applied-filters"
        >
          <li
            class="hzn-applied-filters__item"
          >
            <button
              class="hzn-applied-filters__remove btn btn-primary"
              type="button"
            >
              Found Keyw1
            </button>
          </li>
          <li
            class="hzn-applied-filters__item"
          >
            <button
              class="hzn-applied-filters__remove btn btn-primary"
              type="button"
            >
              Found Plat1
            </button>
          </li>
          <li
            class="hzn-applied-filters__item"
          >
            <button
              class="hzn-applied-filters__remove btn btn-primary"
              type="button"
            >
              2023-01-01 to 2024-02-02
            </button>
          </li>
          <li>
            <button
              class="hzn-applied-filters__clear btn btn-link"
              type="button"
            >
              Clear all
            </button>
          </li>
        </ul>
      </div>
    </header>
    <div
      class="hzn-body"
    >
      <div
        class="container"
      >
        <div
          class="justify-content-between row"
        >
          <div
            aria-hidden="true"
            class="offcanvas-lg offcanvas-start hzn-sidebar hzn-offcanvas hzn-column col"
            data-testid="search-filters"
            id="search-filters"
          >
            <header
              class="offcanvas-header hzn-offcanvas__header"
            >
              <h1>
                Filters
              </h1>
              <button
                aria-label="Close"
                class="btn-close"
                type="button"
              />
            </header>
            <header
              class="offcanvas-lg"
            >
              <h1>
                Filters
              </h1>
            </header>
            <form
              class="hzn-filters"
              role="search"
            >
              <div
                class="hzn-filters__accordion accordion"
              >
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="true"
                      class="accordion-button"
                      type="button"
                    >
                      Topics
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse show"
                  >
                    <div
                      class="accordion-body"
                    >
                      <ul
                        class="hzn-filters__facets"
                      >
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="science_keywords_h=Found Keyw0"
                            name="science_keywords_h"
                            type="checkbox"
                            value="Found Keyw0"
                          />
                          <label
                            for="science_keywords_h=Found Keyw0"
                          >
                            Found Keyw0 (10)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            checked=""
                            id="science_keywords_h=Found Keyw1"
                            name="science_keywords_h"
                            type="checkbox"
                            value="Found Keyw1"
                          />
                          <label
                            for="science_keywords_h=Found Keyw1"
                          >
                            Found Keyw1 (20)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="science_keywords_h=Found Keyw2"
                            name="science_keywords_h"
                            type="checkbox"
                            value="Found Keyw2"
                          />
                          <label
                            for="science_keywords_h=Found Keyw2"
                          >
                            Found Keyw2 (30)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="science_keywords_h=Found Keyw3"
                            name="science_keywords_h"
                            type="checkbox"
                            value="Found Keyw3"
                          />
                          <label
                            for="science_keywords_h=Found Keyw3"
                          >
                            Found Keyw3 (40)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="science_keywords_h=Found Keyw4"
                            name="science_keywords_h"
                            type="checkbox"
                            value="Found Keyw4"
                          />
                          <label
                            for="science_keywords_h=Found Keyw4"
                          >
                            Found Keyw4 (50)
                          </label>
                        </li>
                      </ul>
                      <button
                        class="hzn-filters__expand-facet"
                        type="button"
                      >
                        Show all topics
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Observation Method
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      <ul
                        class="hzn-filters__facets"
                      >
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="platforms_h=Found Plat0"
                            name="platforms_h"
                            type="checkbox"
                            value="Found Plat0"
                          />
                          <label
                            for="platforms_h=Found Plat0"
                          >
                            Found Plat0 (10)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            checked=""
                            id="platforms_h=Found Plat1"
                            name="platforms_h"
                            type="checkbox"
                            value="Found Plat1"
                          />
                          <label
                            for="platforms_h=Found Plat1"
                          >
                            Found Plat1 (20)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="platforms_h=Found Plat2"
                            name="platforms_h"
                            type="checkbox"
                            value="Found Plat2"
                          />
                          <label
                            for="platforms_h=Found Plat2"
                          >
                            Found Plat2 (30)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="platforms_h=Found Plat3"
                            name="platforms_h"
                            type="checkbox"
                            value="Found Plat3"
                          />
                          <label
                            for="platforms_h=Found Plat3"
                          >
                            Found Plat3 (40)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="platforms_h=Found Plat4"
                            name="platforms_h"
                            type="checkbox"
                            value="Found Plat4"
                          />
                          <label
                            for="platforms_h=Found Plat4"
                          >
                            Found Plat4 (50)
                          </label>
                        </li>
                      </ul>
                      <button
                        class="hzn-filters__expand-facet"
                        type="button"
                      >
                        Show all observation methods
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Temporal
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      <div
                        class="hzn-filters__accordion_sub accordion"
                      >
                        <div
                          class="accordion-item"
                        >
                          <h2
                            class="accordion-header"
                          >
                            <button
                              aria-expanded="true"
                              class="accordion-button"
                              type="button"
                            >
                              Coverage Date Range
                            </button>
                          </h2>
                          <div
                            class="accordion-collapse collapse show"
                          >
                            <div
                              class="accordion-body"
                            >
                              <div>
                                <label
                                  class="form-label"
                                  for="temporal[0]"
                                >
                                  Start Date
                                </label>
                                <input
                                  aria-label="Start Date"
                                  class="form-control form-control-sm"
                                  id="temporal[0]"
                                  name="temporal[0]"
                                  placeholder="MM/DD/YYYY"
                                  type="date"
                                  value="2023-01-01"
                                />
                              </div>
                              <div>
                                <label
                                  class="form-label"
                                  for="temporal[1]"
                                >
                                  End Date
                                </label>
                                <input
                                  aria-label="End Date"
                                  class="form-control form-control-sm"
                                  id="temporal[1]"
                                  name="temporal[1]"
                                  placeholder="MM/DD/YYYY"
                                  type="date"
                                  value="2024-02-02"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Spatial
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      <div
                        class="hzn-filters__accordion_sub accordion"
                      >
                        <div
                          class="accordion-item"
                        >
                          <h2
                            class="accordion-header"
                          >
                            <button
                              aria-expanded="true"
                              class="accordion-button"
                              type="button"
                            >
                              Coverage
                            </button>
                          </h2>
                          <div
                            class="accordion-collapse collapse show"
                          >
                            <div
                              class="accordion-body"
                            >
                              <div>
                                <input
                                  aria-label="Bounding Box"
                                  class="form-control form-control-sm"
                                  id="bounding_box"
                                  name="bounding_box"
                                  placeholder="-180,-90,180,90 (W,S,E,N)"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="accordion-item"
                        >
                          <h2
                            class="accordion-header"
                          >
                            <button
                              aria-expanded="true"
                              class="accordion-button"
                              type="button"
                            >
                              Resolution
                            </button>
                          </h2>
                          <div
                            class="accordion-collapse collapse show"
                          >
                            <div
                              class="accordion-body"
                            >
                              <ul
                                class="hzn-filters__facets"
                              >
                                <li
                                  class="hzn-checklist-item"
                                >
                                  <input
                                    id="horizontal_data_resolution_range=Found Hori0"
                                    name="horizontal_data_resolution_range"
                                    type="checkbox"
                                    value="Found Hori0"
                                  />
                                  <label
                                    for="horizontal_data_resolution_range=Found Hori0"
                                  >
                                    Found Hori0 (10)
                                  </label>
                                </li>
                                <li
                                  class="hzn-checklist-item"
                                >
                                  <input
                                    id="horizontal_data_resolution_range=Found Hori1"
                                    name="horizontal_data_resolution_range"
                                    type="checkbox"
                                    value="Found Hori1"
                                  />
                                  <label
                                    for="horizontal_data_resolution_range=Found Hori1"
                                  >
                                    Found Hori1 (20)
                                  </label>
                                </li>
                                <li
                                  class="hzn-checklist-item"
                                >
                                  <input
                                    id="horizontal_data_resolution_range=Found Hori2"
                                    name="horizontal_data_resolution_range"
                                    type="checkbox"
                                    value="Found Hori2"
                                  />
                                  <label
                                    for="horizontal_data_resolution_range=Found Hori2"
                                  >
                                    Found Hori2 (30)
                                  </label>
                                </li>
                                <li
                                  class="hzn-checklist-item"
                                >
                                  <input
                                    id="horizontal_data_resolution_range=Found Hori3"
                                    name="horizontal_data_resolution_range"
                                    type="checkbox"
                                    value="Found Hori3"
                                  />
                                  <label
                                    for="horizontal_data_resolution_range=Found Hori3"
                                  >
                                    Found Hori3 (40)
                                  </label>
                                </li>
                                <li
                                  class="hzn-checklist-item"
                                >
                                  <input
                                    id="horizontal_data_resolution_range=Found Hori4"
                                    name="horizontal_data_resolution_range"
                                    type="checkbox"
                                    value="Found Hori4"
                                  />
                                  <label
                                    for="horizontal_data_resolution_range=Found Hori4"
                                  >
                                    Found Hori4 (50)
                                  </label>
                                </li>
                              </ul>
                              <button
                                class="hzn-filters__expand-facet"
                                type="button"
                              >
                                Show all spatial resolutions
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Data Format
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      <ul
                        class="hzn-filters__facets"
                      >
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="granule_data_format_h=Found Data0"
                            name="granule_data_format_h"
                            type="checkbox"
                            value="Found Data0"
                          />
                          <label
                            for="granule_data_format_h=Found Data0"
                          >
                            Found Data0 (10)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="granule_data_format_h=Found Data1"
                            name="granule_data_format_h"
                            type="checkbox"
                            value="Found Data1"
                          />
                          <label
                            for="granule_data_format_h=Found Data1"
                          >
                            Found Data1 (20)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="granule_data_format_h=Found Data2"
                            name="granule_data_format_h"
                            type="checkbox"
                            value="Found Data2"
                          />
                          <label
                            for="granule_data_format_h=Found Data2"
                          >
                            Found Data2 (30)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="granule_data_format_h=Found Data3"
                            name="granule_data_format_h"
                            type="checkbox"
                            value="Found Data3"
                          />
                          <label
                            for="granule_data_format_h=Found Data3"
                          >
                            Found Data3 (40)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="granule_data_format_h=Found Data4"
                            name="granule_data_format_h"
                            type="checkbox"
                            value="Found Data4"
                          />
                          <label
                            for="granule_data_format_h=Found Data4"
                          >
                            Found Data4 (50)
                          </label>
                        </li>
                      </ul>
                      <button
                        class="hzn-filters__expand-facet"
                        type="button"
                      >
                        Show all data formats
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Data Processing Level
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      <ul
                        class="hzn-filters__facets"
                      >
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="processing_level_id=Found Proc0"
                            name="processing_level_id"
                            type="checkbox"
                            value="Found Proc0"
                          />
                          <label
                            for="processing_level_id=Found Proc0"
                          >
                            Found Proc0 (10)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="processing_level_id=Found Proc1"
                            name="processing_level_id"
                            type="checkbox"
                            value="Found Proc1"
                          />
                          <label
                            for="processing_level_id=Found Proc1"
                          >
                            Found Proc1 (20)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="processing_level_id=Found Proc2"
                            name="processing_level_id"
                            type="checkbox"
                            value="Found Proc2"
                          />
                          <label
                            for="processing_level_id=Found Proc2"
                          >
                            Found Proc2 (30)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="processing_level_id=Found Proc3"
                            name="processing_level_id"
                            type="checkbox"
                            value="Found Proc3"
                          />
                          <label
                            for="processing_level_id=Found Proc3"
                          >
                            Found Proc3 (40)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="processing_level_id=Found Proc4"
                            name="processing_level_id"
                            type="checkbox"
                            value="Found Proc4"
                          />
                          <label
                            for="processing_level_id=Found Proc4"
                          >
                            Found Proc4 (50)
                          </label>
                        </li>
                      </ul>
                      <button
                        class="hzn-filters__expand-facet"
                        type="button"
                      >
                        Show all processing levels
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
          <div
            aria-busy="false"
            class="hzn-content hzn-column col"
            role="main"
          >
            <header
              class="hzn-search-results-header"
            >
              <div
                class="row"
              >
                <div
                  class="search-results-header__summary col"
                >
                  <div
                    class="d-none d-md-block mb-md-3 mb-lg-0"
                  >
                    Showing 
                    1
                     of 
                    1
                     
                    result
                  </div>
                  <div
                    class="hzn-sidebar-control hzn-filter-summary"
                  >
                    <button
                      aria-controls="search-filters"
                      class="hzn-filter-summary__button btn btn-link"
                      type="button"
                    >
                      Filter
                       (3) 
                      <span
                        class="hzn-filter-summary__icon"
                      >
                        <i
                          class="hzn-icon hzn-icon-list"
                        />
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="search-result-sort__row col"
                >
                  <div
                    class="search-result-sort__dropdown dropdown"
                  >
                    <button
                      aria-expanded="false"
                      class="dropdown-toggle btn btn-none"
                      id="react-aria-:r1m:"
                      type="button"
                    >
                      <span
                        class="search-result-sort__label"
                      >
                        SORT:
                      </span>
                      <span
                        class="search-result-sort__value"
                      >
                        Relevance
                      </span>
                      <svg
                        class="search-result-sort__svg-icon"
                        fill="none"
                        height="10"
                        viewBox="0 0 8 6"
                        width="10"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4 3.855L7.233.6 8 1.372 4 5.4 0 1.372.767.6 4 3.855z"
                          fill="black"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </header>
            <div
              class="hzn-search-result pb-2"
            >
              <div
                class="row"
              >
                <div
                  class="hzn-search-result__meta_metadata col"
                >
                  Data       Published 
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="col-lg-9"
                >
                  <h1>
                    <a
                      href="/collections/c001-fake"
                    >
                      Found  collection 1
                    </a>
                  </h1>
                  <p
                    class="hzn-search-result__abstract mb-3"
                    data-testid="collection-search-result__abstract"
                  >
                    Found  summary 1
                  </p>
                </div>
                <div
                  class="col-lg-3"
                >
                  <div
                    class="row"
                  />
                </div>
              </div>
            </div>
            <div
              class="d-none d-md-block mt-3 mb-3 nav"
            />
            <div
              class="search-result-navigation container"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                />
                <div
                  class="search-result-navigation__row col"
                >
                  <div
                    class="search-result-navigation__dropdown dropdown"
                  >
                    <button
                      aria-expanded="false"
                      class="dropdown-toggle btn btn-none"
                      id="react-aria-:r1n:"
                      type="button"
                    >
                      <span
                        class="search-result-navigation__label"
                      >
                        ROWS
                      </span>
                      <span
                        class="search-result-navigation__page-size"
                      >
                        20
                      </span>
                      <svg
                        class="search-result-navigation__svg-icon"
                        fill="none"
                        height="10"
                        viewBox="0 0 8 6"
                        width="10"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4 3.855L7.233.6 8 1.372 4 5.4 0 1.372.767.6 4 3.855z"
                          fill="black"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataCatalog > When filters have been applied > clicking to remove a temporal filter removes the temporal filter 1`] = `
<div>
  <div
    class="data-catalog-wrapper"
  >
    <header
      class="hzn-main-header"
    >
      <div
        class="pt-4 container"
      >
        <h1>
          Data Catalog
        </h1>
        <form
          class=""
        >
          <div
            class="hzn-search hzn-global-header"
          >
            <input
              class="form-control"
              data-testid="collection-search__keyword"
              name="keyword"
              placeholder="Search using keywords, platform, dataset name, and more…"
              role="searchbox"
              type="text"
              value=""
            />
            <button
              aria-label="Submit"
              class="hzn-search__button btn btn-primary"
              type="button"
            />
          </div>
        </form>
        <ul
          class="hzn-applied-filters"
        >
          <li
            class="hzn-applied-filters__item"
          >
            <button
              class="hzn-applied-filters__remove btn btn-primary"
              type="button"
            >
              Found Keyw1
            </button>
          </li>
          <li
            class="hzn-applied-filters__item"
          >
            <button
              class="hzn-applied-filters__remove btn btn-primary"
              type="button"
            >
              Found Plat1
            </button>
          </li>
          <li
            class="hzn-applied-filters__item"
          >
            <button
              class="hzn-applied-filters__remove btn btn-primary"
              type="button"
            >
              -45,-45,45,45
            </button>
          </li>
          <li>
            <button
              class="hzn-applied-filters__clear btn btn-link"
              type="button"
            >
              Clear all
            </button>
          </li>
        </ul>
      </div>
    </header>
    <div
      class="hzn-body"
    >
      <div
        class="container"
      >
        <div
          class="justify-content-between row"
        >
          <div
            aria-hidden="true"
            class="offcanvas-lg offcanvas-start hzn-sidebar hzn-offcanvas hzn-column col"
            data-testid="search-filters"
            id="search-filters"
          >
            <header
              class="offcanvas-header hzn-offcanvas__header"
            >
              <h1>
                Filters
              </h1>
              <button
                aria-label="Close"
                class="btn-close"
                type="button"
              />
            </header>
            <header
              class="offcanvas-lg"
            >
              <h1>
                Filters
              </h1>
            </header>
            <form
              class="hzn-filters"
              role="search"
            >
              <div
                class="hzn-filters__accordion accordion"
              >
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="true"
                      class="accordion-button"
                      type="button"
                    >
                      Topics
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse show"
                  >
                    <div
                      class="accordion-body"
                    >
                      <ul
                        class="hzn-filters__facets"
                      >
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="science_keywords_h=Found Keyw0"
                            name="science_keywords_h"
                            type="checkbox"
                            value="Found Keyw0"
                          />
                          <label
                            for="science_keywords_h=Found Keyw0"
                          >
                            Found Keyw0 (10)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            checked=""
                            id="science_keywords_h=Found Keyw1"
                            name="science_keywords_h"
                            type="checkbox"
                            value="Found Keyw1"
                          />
                          <label
                            for="science_keywords_h=Found Keyw1"
                          >
                            Found Keyw1 (20)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="science_keywords_h=Found Keyw2"
                            name="science_keywords_h"
                            type="checkbox"
                            value="Found Keyw2"
                          />
                          <label
                            for="science_keywords_h=Found Keyw2"
                          >
                            Found Keyw2 (30)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="science_keywords_h=Found Keyw3"
                            name="science_keywords_h"
                            type="checkbox"
                            value="Found Keyw3"
                          />
                          <label
                            for="science_keywords_h=Found Keyw3"
                          >
                            Found Keyw3 (40)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="science_keywords_h=Found Keyw4"
                            name="science_keywords_h"
                            type="checkbox"
                            value="Found Keyw4"
                          />
                          <label
                            for="science_keywords_h=Found Keyw4"
                          >
                            Found Keyw4 (50)
                          </label>
                        </li>
                      </ul>
                      <button
                        class="hzn-filters__expand-facet"
                        type="button"
                      >
                        Show all topics
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Observation Method
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      <ul
                        class="hzn-filters__facets"
                      >
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="platforms_h=Found Plat0"
                            name="platforms_h"
                            type="checkbox"
                            value="Found Plat0"
                          />
                          <label
                            for="platforms_h=Found Plat0"
                          >
                            Found Plat0 (10)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            checked=""
                            id="platforms_h=Found Plat1"
                            name="platforms_h"
                            type="checkbox"
                            value="Found Plat1"
                          />
                          <label
                            for="platforms_h=Found Plat1"
                          >
                            Found Plat1 (20)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="platforms_h=Found Plat2"
                            name="platforms_h"
                            type="checkbox"
                            value="Found Plat2"
                          />
                          <label
                            for="platforms_h=Found Plat2"
                          >
                            Found Plat2 (30)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="platforms_h=Found Plat3"
                            name="platforms_h"
                            type="checkbox"
                            value="Found Plat3"
                          />
                          <label
                            for="platforms_h=Found Plat3"
                          >
                            Found Plat3 (40)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="platforms_h=Found Plat4"
                            name="platforms_h"
                            type="checkbox"
                            value="Found Plat4"
                          />
                          <label
                            for="platforms_h=Found Plat4"
                          >
                            Found Plat4 (50)
                          </label>
                        </li>
                      </ul>
                      <button
                        class="hzn-filters__expand-facet"
                        type="button"
                      >
                        Show all observation methods
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Temporal
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      <div
                        class="hzn-filters__accordion_sub accordion"
                      >
                        <div
                          class="accordion-item"
                        >
                          <h2
                            class="accordion-header"
                          >
                            <button
                              aria-expanded="true"
                              class="accordion-button"
                              type="button"
                            >
                              Coverage Date Range
                            </button>
                          </h2>
                          <div
                            class="accordion-collapse collapse show"
                          >
                            <div
                              class="accordion-body"
                            >
                              <div>
                                <label
                                  class="form-label"
                                  for="temporal[0]"
                                >
                                  Start Date
                                </label>
                                <input
                                  aria-label="Start Date"
                                  class="form-control form-control-sm"
                                  id="temporal[0]"
                                  name="temporal[0]"
                                  placeholder="MM/DD/YYYY"
                                  type="date"
                                  value=""
                                />
                              </div>
                              <div>
                                <label
                                  class="form-label"
                                  for="temporal[1]"
                                >
                                  End Date
                                </label>
                                <input
                                  aria-label="End Date"
                                  class="form-control form-control-sm"
                                  id="temporal[1]"
                                  name="temporal[1]"
                                  placeholder="MM/DD/YYYY"
                                  type="date"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Spatial
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      <div
                        class="hzn-filters__accordion_sub accordion"
                      >
                        <div
                          class="accordion-item"
                        >
                          <h2
                            class="accordion-header"
                          >
                            <button
                              aria-expanded="true"
                              class="accordion-button"
                              type="button"
                            >
                              Coverage
                            </button>
                          </h2>
                          <div
                            class="accordion-collapse collapse show"
                          >
                            <div
                              class="accordion-body"
                            >
                              <div>
                                <input
                                  aria-label="Bounding Box"
                                  class="form-control form-control-sm"
                                  id="bounding_box"
                                  name="bounding_box"
                                  placeholder="-180,-90,180,90 (W,S,E,N)"
                                  type="text"
                                  value="-45,-45,45,45"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="accordion-item"
                        >
                          <h2
                            class="accordion-header"
                          >
                            <button
                              aria-expanded="true"
                              class="accordion-button"
                              type="button"
                            >
                              Resolution
                            </button>
                          </h2>
                          <div
                            class="accordion-collapse collapse show"
                          >
                            <div
                              class="accordion-body"
                            >
                              <ul
                                class="hzn-filters__facets"
                              >
                                <li
                                  class="hzn-checklist-item"
                                >
                                  <input
                                    id="horizontal_data_resolution_range=Found Hori0"
                                    name="horizontal_data_resolution_range"
                                    type="checkbox"
                                    value="Found Hori0"
                                  />
                                  <label
                                    for="horizontal_data_resolution_range=Found Hori0"
                                  >
                                    Found Hori0 (10)
                                  </label>
                                </li>
                                <li
                                  class="hzn-checklist-item"
                                >
                                  <input
                                    id="horizontal_data_resolution_range=Found Hori1"
                                    name="horizontal_data_resolution_range"
                                    type="checkbox"
                                    value="Found Hori1"
                                  />
                                  <label
                                    for="horizontal_data_resolution_range=Found Hori1"
                                  >
                                    Found Hori1 (20)
                                  </label>
                                </li>
                                <li
                                  class="hzn-checklist-item"
                                >
                                  <input
                                    id="horizontal_data_resolution_range=Found Hori2"
                                    name="horizontal_data_resolution_range"
                                    type="checkbox"
                                    value="Found Hori2"
                                  />
                                  <label
                                    for="horizontal_data_resolution_range=Found Hori2"
                                  >
                                    Found Hori2 (30)
                                  </label>
                                </li>
                                <li
                                  class="hzn-checklist-item"
                                >
                                  <input
                                    id="horizontal_data_resolution_range=Found Hori3"
                                    name="horizontal_data_resolution_range"
                                    type="checkbox"
                                    value="Found Hori3"
                                  />
                                  <label
                                    for="horizontal_data_resolution_range=Found Hori3"
                                  >
                                    Found Hori3 (40)
                                  </label>
                                </li>
                                <li
                                  class="hzn-checklist-item"
                                >
                                  <input
                                    id="horizontal_data_resolution_range=Found Hori4"
                                    name="horizontal_data_resolution_range"
                                    type="checkbox"
                                    value="Found Hori4"
                                  />
                                  <label
                                    for="horizontal_data_resolution_range=Found Hori4"
                                  >
                                    Found Hori4 (50)
                                  </label>
                                </li>
                              </ul>
                              <button
                                class="hzn-filters__expand-facet"
                                type="button"
                              >
                                Show all spatial resolutions
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Data Format
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      <ul
                        class="hzn-filters__facets"
                      >
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="granule_data_format_h=Found Data0"
                            name="granule_data_format_h"
                            type="checkbox"
                            value="Found Data0"
                          />
                          <label
                            for="granule_data_format_h=Found Data0"
                          >
                            Found Data0 (10)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="granule_data_format_h=Found Data1"
                            name="granule_data_format_h"
                            type="checkbox"
                            value="Found Data1"
                          />
                          <label
                            for="granule_data_format_h=Found Data1"
                          >
                            Found Data1 (20)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="granule_data_format_h=Found Data2"
                            name="granule_data_format_h"
                            type="checkbox"
                            value="Found Data2"
                          />
                          <label
                            for="granule_data_format_h=Found Data2"
                          >
                            Found Data2 (30)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="granule_data_format_h=Found Data3"
                            name="granule_data_format_h"
                            type="checkbox"
                            value="Found Data3"
                          />
                          <label
                            for="granule_data_format_h=Found Data3"
                          >
                            Found Data3 (40)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="granule_data_format_h=Found Data4"
                            name="granule_data_format_h"
                            type="checkbox"
                            value="Found Data4"
                          />
                          <label
                            for="granule_data_format_h=Found Data4"
                          >
                            Found Data4 (50)
                          </label>
                        </li>
                      </ul>
                      <button
                        class="hzn-filters__expand-facet"
                        type="button"
                      >
                        Show all data formats
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Data Processing Level
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      <ul
                        class="hzn-filters__facets"
                      >
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="processing_level_id=Found Proc0"
                            name="processing_level_id"
                            type="checkbox"
                            value="Found Proc0"
                          />
                          <label
                            for="processing_level_id=Found Proc0"
                          >
                            Found Proc0 (10)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="processing_level_id=Found Proc1"
                            name="processing_level_id"
                            type="checkbox"
                            value="Found Proc1"
                          />
                          <label
                            for="processing_level_id=Found Proc1"
                          >
                            Found Proc1 (20)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="processing_level_id=Found Proc2"
                            name="processing_level_id"
                            type="checkbox"
                            value="Found Proc2"
                          />
                          <label
                            for="processing_level_id=Found Proc2"
                          >
                            Found Proc2 (30)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="processing_level_id=Found Proc3"
                            name="processing_level_id"
                            type="checkbox"
                            value="Found Proc3"
                          />
                          <label
                            for="processing_level_id=Found Proc3"
                          >
                            Found Proc3 (40)
                          </label>
                        </li>
                        <li
                          class="hzn-checklist-item"
                        >
                          <input
                            id="processing_level_id=Found Proc4"
                            name="processing_level_id"
                            type="checkbox"
                            value="Found Proc4"
                          />
                          <label
                            for="processing_level_id=Found Proc4"
                          >
                            Found Proc4 (50)
                          </label>
                        </li>
                      </ul>
                      <button
                        class="hzn-filters__expand-facet"
                        type="button"
                      >
                        Show all processing levels
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
          <div
            aria-busy="false"
            class="hzn-content hzn-column col"
            role="main"
          >
            <header
              class="hzn-search-results-header"
            >
              <div
                class="row"
              >
                <div
                  class="search-results-header__summary col"
                >
                  <div
                    class="d-none d-md-block mb-md-3 mb-lg-0"
                  >
                    Showing 
                    1
                     of 
                    1
                     
                    result
                  </div>
                  <div
                    class="hzn-sidebar-control hzn-filter-summary"
                  >
                    <button
                      aria-controls="search-filters"
                      class="hzn-filter-summary__button btn btn-link"
                      type="button"
                    >
                      Filter
                       (3) 
                      <span
                        class="hzn-filter-summary__icon"
                      >
                        <i
                          class="hzn-icon hzn-icon-list"
                        />
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="search-result-sort__row col"
                >
                  <div
                    class="search-result-sort__dropdown dropdown"
                  >
                    <button
                      aria-expanded="false"
                      class="dropdown-toggle btn btn-none"
                      id="react-aria-:r1g:"
                      type="button"
                    >
                      <span
                        class="search-result-sort__label"
                      >
                        SORT:
                      </span>
                      <span
                        class="search-result-sort__value"
                      >
                        Relevance
                      </span>
                      <svg
                        class="search-result-sort__svg-icon"
                        fill="none"
                        height="10"
                        viewBox="0 0 8 6"
                        width="10"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4 3.855L7.233.6 8 1.372 4 5.4 0 1.372.767.6 4 3.855z"
                          fill="black"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </header>
            <div
              class="hzn-search-result pb-2"
            >
              <div
                class="row"
              >
                <div
                  class="hzn-search-result__meta_metadata col"
                >
                  Data       Published 
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="col-lg-9"
                >
                  <h1>
                    <a
                      href="/collections/c001-fake"
                    >
                      Found  collection 1
                    </a>
                  </h1>
                  <p
                    class="hzn-search-result__abstract mb-3"
                    data-testid="collection-search-result__abstract"
                  >
                    Found  summary 1
                  </p>
                </div>
                <div
                  class="col-lg-3"
                >
                  <div
                    class="row"
                  />
                </div>
              </div>
            </div>
            <div
              class="d-none d-md-block mt-3 mb-3 nav"
            />
            <div
              class="search-result-navigation container"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                />
                <div
                  class="search-result-navigation__row col"
                >
                  <div
                    class="search-result-navigation__dropdown dropdown"
                  >
                    <button
                      aria-expanded="false"
                      class="dropdown-toggle btn btn-none"
                      id="react-aria-:r1h:"
                      type="button"
                    >
                      <span
                        class="search-result-navigation__label"
                      >
                        ROWS
                      </span>
                      <span
                        class="search-result-navigation__page-size"
                      >
                        20
                      </span>
                      <svg
                        class="search-result-navigation__svg-icon"
                        fill="none"
                        height="10"
                        viewBox="0 0 8 6"
                        width="10"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M4 3.855L7.233.6 8 1.372 4 5.4 0 1.372.767.6 4 3.855z"
                          fill="black"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
